add test and refactor after tests